--- a/helpers/layout.css
+++ b/helpers/layout.css
@@ -6,9 +6,8 @@ body {
 }
 
 html [type=button] {
-	-webkit-appearance: none;
+    -webkit-appearance: none;
 }
-
 
 .centerit {
     text-align: center;
@@ -33,6 +32,7 @@ html [type=button] {
 
 .articleTitle {
     font-style: italic;
+    color: bold;
 }
 
 .pick-button:hover {
@@ -42,8 +42,8 @@ html [type=button] {
 }
 
 .button-container {
-	display:  block;
-	margin-top: 20px;
+    display: block;
+    margin-top: 20px;
 }
 
 .pick-button {
@@ -64,4 +64,18 @@ html [type=button] {
 .js-discard {
     background-color: pink;
     border: 2px solid red;
+}
+
+.periodicalName {
+    text-align: left;
+}
+
+.js-count {
+		display:  inline-block;
+    text-align: right;
+}
+
+.dateString {
+    display: block;
+    text-align: left;
 }
