--- a/main.css
+++ b/main.css
@@ -43,9 +43,16 @@ body {
 }
 
 .js-periodical:hover {
-  background-color: #a6a6a6;  /* medium gray */
-  color: red;
+  background-color: #999;  /* light gray */
+  color: white;
   cursor: pointer;
+  margin-right: 15px;
+  margin-left: 10px;
+  padding-left: 10px;
+  border: 1px solid black;
+  border-radius: 25px;
+  font-size: 18px;
+  box-shadow: 5px 5px 5px #bfbfbf; /* light gray */
 }
 
 .js-periodical {
@@ -53,21 +60,29 @@ body {
   margin-right: 5px;
   margin-top: 8px;
   margin-bottom: 8px;
+  transition: background-color 0.25s, 
+              color 0.25s,
+              font-size 0.25s,
+              box-shadow 0.25s,
+              margin-left 0.25s,
+              margin-right 0.25s,
+              padding-left 0.25s,
+              border-radius 0.25s;
 }
 
 
 /* Style the tab */
 
-div.tab {
+/* div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-}
+} */
 
 
 /* Style the buttons inside the tab */
 
-div.tab button {
+/* div.tab button {
     background-color: inherit;
     float: left;
     border: none;
@@ -75,57 +90,56 @@ div.tab button {
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
-}
+} */
 
 
 /* Change background color of buttons on hover */
 
-div.tab button:hover {
+/* div.tab button:hover {
     background-color: #ddd;
-}
+} */
 
 
 /* Create an active/current tablink class */
 
-div.tab button.active {
+/* div.tab button.active {
     background-color: #ccc;
-}
+} */
 
 
 /* Style the tab content */
 
-.tabcontent {
+/* .tabcontent {
     display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
-}
+} */
 
-.tabcontent {
+/* .tabcontent {
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
     /* Fading effect takes 1 second */
-}
 
-@-webkit-keyframes fadeEffect {
+/* @-webkit-keyframes fadeEffect {
     from {
         opacity: 0;
     }
     to {
         opacity: 1;
     }
-}
+} */
 
-@keyframes fadeEffect {
+/* @keyframes fadeEffect {
     from {
         opacity: 0;
     }
     to {
         opacity: 1;
     }
-}
+} */
 
-.heading {
+/* .heading {
     color: yellow;
     font-variant: small-caps;
 }
@@ -139,33 +153,12 @@ div.tab button.active {
     margin-left: 10px;
     font-size: 15px;
     vertical-align: middle;
-}
+} */
 
-label input {
+/* label input {
     display: none;
-    /* <-- hide the default checkbox */
-}
-
+    <-- hide the default checkbox
+} */
+/* 
 label span {
     /* <-- style the artificial checkbox */
-    height: 15px;
-    width: 15px;
-    border: 1px solid grey;
-    display: inline-block;
-    position: relative;
-}
-
-[type=checkbox]:checked + span::before {
-    /* <-- style its checked state..with a ticked icon */
-    content: '\2714';
-    position: absolute;
-    top: 0;
-    /* was -5px  */
-    left: 0;
-    color: #00cc00;
-}
-
-ul {
-    column-count: 3;
-    column-gap: 15px;
-}
