--- a/main.css
+++ b/main.css
@@ -1,8 +1,6 @@
 body {
-    /* padding-top: 20px; */
     font-family: Roboto;
     background-color: #333; 
-    /* dark gray */
     color: black;
 }
 
@@ -21,6 +19,39 @@ body {
 
 .tablinks {
     font-size: 12px;
+}
+
+.main-container {
+    padding-left: 10px;
+    /* padding-right: 10px; */
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.header-container {
+    margin-left: 10px;
+    margin-right: 10px;
+    /* width: 100%; */
+    height: 40px;
+    background-color: #e6ffff; /* light blue */
+}
+
+.header-periodicals {
+    width: 20%;
+    color:  black;
+    text-align: center;
+    margin: 0;
+    float: left;
+    font-size: 18px;
+    padding-top:  10px;
+}
+
+.header-readinglist {
+    /* width: 80%; */
+    color: black;
+    text-align: center;
+    font-size:  18px;
+    padding-top: 10px;
 }
 
 .app-container {
@@ -60,14 +91,14 @@ body {
   margin-right: 5px;
   margin-top: 8px;
   margin-bottom: 8px;
-  transition: background-color 0.25s, 
-              color 0.25s,
-              font-size 0.25s,
-              box-shadow 0.25s,
-              margin-left 0.25s,
-              margin-right 0.25s,
-              padding-left 0.25s,
-              border-radius 0.25s;
+  transition: background-color 0.33s, 
+              color 0.33s,
+              font-size 0.33s,
+              box-shadow 0.33s,
+              margin-left 0.33s,
+              margin-right 0.33s,
+              padding-left 0.33s,
+              border-radius 0.33s;
 }
 
 
