--- a/main.css
+++ b/main.css
@@ -1,71 +1,73 @@
 body {
-    font-family: Roboto;
-    background-color: #333; 
-    color: black;
+  font-family: Roboto;
+  background-color: #333; 
+  color: black;
 }
 
 .centerit {
-    text-align: center;
+  text-align: center;
 }
 
 .clearit {
-    margin-top: 20px;
-    clear: left;
+  margin-top: 20px;
+  clear: left;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .tablinks {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .main-container {
-    padding-left: 10px;
-    /* padding-right: 10px; */
-    margin-left: 10px;
-    margin-right: 10px;
+  padding-left: 10px;
+  /* padding-right: 10px; */
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .header-container {
-    margin-left: 10px;
-    margin-right: 10px;
-    /* width: 100%; */
-    height: 40px;
-    background-color: #e6ffff; /* light blue */
+  margin-left: 10px;
+  margin-right: 10px;
+  /* width: 100%; */
+  height: 40px;
+  background-color: #e6ffff; /* light blue */
 }
 
 .header-periodicals {
-    width: 20%;
-    color:  black;
-    text-align: center;
-    margin: 0;
-    float: left;
-    font-size: 18px;
-    padding-top:  10px;
+  width: 20%;
+  color:  black;
+  text-align: center;
+  margin: 0;
+  float: left;
+  font-size: 18px;
+  padding-top:  10px;
 }
 
 .header-readinglist {
-    /* width: 80%; */
-    color: black;
-    text-align: center;
-    font-size:  18px;
-    padding-top: 10px;
+  /* width: 80%; */
+  color: black;
+  text-align: center;
+  font-size:  18px;
+  padding-top: 10px;
 }
 
 .app-container {
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: #ffffe6; /* light yellow */
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: #ffffe6; /* light yellow */
 }
 
 #source-container {
-    width: 20%;
-    height: 1000px;
-    background-color: #f2f2f2;   /* light gray */
-    overflow-y: auto;
-}
+  width: 225px;
+  height: 1000px;
+  background-color: #f2f2f2;   /* light gray */
+  overflow-y: auto;
+  float: left;
+  white-space: nowrap;  /* added for cases of narrow window */
+} 
 
 .js-category {
   color: blue;
@@ -77,11 +79,12 @@ body {
   background-color: #999;  /* light gray */
   color: white;
   cursor: pointer;
-  margin-right: 15px;
-  margin-left: 10px;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding-top:  2px;
   padding-left: 10px;
-  border: 1px solid black;
-  border-radius: 25px;
+  /* border: 1px solid black; */
+  /* border-radius: 25px; */
   font-size: 18px;
   box-shadow: 5px 5px 5px #bfbfbf; /* light gray */
 }
@@ -97,99 +100,93 @@ body {
               box-shadow 0.33s,
               margin-left 0.33s,
               margin-right 0.33s,
-              padding-left 0.33s,
-              border-radius 0.33s;
+              padding-left 0.33s;
+              /* border-radius 0.33s; */
 }
 
-
-/* Style the tab */
-
-/* div.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-} */
-
-
-/* Style the buttons inside the tab */
-
-/* div.tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-} */
-
-
-/* Change background color of buttons on hover */
-
-/* div.tab button:hover {
-    background-color: #ddd;
-} */
-
-
-/* Create an active/current tablink class */
-
-/* div.tab button.active {
-    background-color: #ccc;
-} */
-
-
-/* Style the tab content */
-
-/* .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-} */
-
-/* .tabcontent {
-    -webkit-animation: fadeEffect 1s;
-    animation: fadeEffect 1s;
-    /* Fading effect takes 1 second */
-
-/* @-webkit-keyframes fadeEffect {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-} */
-
-/* @keyframes fadeEffect {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-} */
-
-/* .heading {
-    color: yellow;
-    font-variant: small-caps;
+.js-readinglist {
+  width: auto;   /* was 600px; */
+  height: 1000px;
+  background-color: lightgreen;
+  /* padding-top: 10px; */
+  /* float: left; */
+  overflow-y: auto;
 }
 
-.source-checkbox {
-    text-indent: 30px;
-    font-size: 15px;
+.accordion-strip:hover {
+  background-color: #f2f2f2;
 }
 
-.sourcetitle {
-    margin-left: 10px;
-    font-size: 15px;
-    vertical-align: middle;
-} */
+.accordion-strip {
+  width: 600px;
+  /* float: left; */
+}
 
-/* label input {
-    display: none;
-    <-- hide the default checkbox
-} */
-/* 
-label span {
-    /* <-- style the artificial checkbox */
+.panel {
+  width:  auto;
+}
+
+.strip-source {
+  font-size: 14px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 4px;
+  float: left;
+}
+
+.accordion-date {
+  font-size:  small;
+  font-style:  italic;
+  margin-left: 10px;
+  clear: left;
+}
+
+.strip-title {
+  clear: left;
+  color: blue;
+  margin: 4px;
+  text-align:  left;
+}
+
+.panelURLImage {
+  width: 280px;
+  height: 220px;
+  border: 1px solid black;
+  margin-right: 12px;
+  float: left;
+}
+.panelDesc {
+  margin-left: 50px;
+  margin-right: 25px;
+}
+
+.panelArticleTitle {
+  font-size: 18px;
+  color: gold;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 5px;
+  margin-bottom: 12px;
+}
+
+.panelSourceName {
+  font-size: small;
+  margin-left:  10px;
+  margin-top: 5px;
+  margin-bottom:  5px;
+}
+
+.dateString {
+  margin-top: 5px;
+  margin-left: 10px;
+  font-size:  small;
+}
+
+.panelAuthor {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  margin-left:  50px;
+  margin-right: 25px;
+  /* font-size:  small; */
+}
+
