--- a/main.css
+++ b/main.css
@@ -190,3 +190,35 @@ body {
   /* font-size:  small; */
 }
 
+.button-container {
+  margin-top: 20px;
+}
+
+.button-left {
+    /* display: inline-block; */
+    text-align: center;
+    padding-right: 0.75em;
+    padding-left: 0.75em;
+    /* width: 44%; */
+    /* float: right; */
+    color: black;
+    background-color: pink;
+    border: 1px solid red;
+    font-weight: bold;
+    border-radius: 25px;
+}
+
+.button-right {
+    /* display: inline-block; */
+    text-align: center;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+    /* width: 44%; */
+    float: left;
+    color: black;
+    background-color: lightblue;
+    border: 1px solid limegreen;
+    font-weight: bold;
+    border-radius: 25px;
+}
+
