--- a/main.css
+++ b/main.css
@@ -31,12 +31,28 @@ body {
 .header-container {
   margin-left: 10px;
   margin-right: 10px;
-  /* width: 100%; */
-  height: 40px;
+  width: 800%;
+  height: 50px;
   background-color: #e6ffff; /* light blue */
 }
 
-.header-periodicals {
+.header-remove-all {
+  background-color:  lightgreen;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin-left: 350px;
+  margin-top: 15px;
+}
+
+.header-compact-all {
+  background-color:  lightblue;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin-top: 15px;
+
+}
+
+/* .header-periodicals {
   width: 20%;
   color:  black;
   text-align: center;
@@ -44,15 +60,14 @@ body {
   float: left;
   font-size: 18px;
   padding-top:  10px;
-}
+} */
 
-.header-readinglist {
-  /* width: 80%; */
+/* .header-readinglist {
   color: black;
   text-align: center;
   font-size:  18px;
   padding-top: 10px;
-}
+} */
 
 .app-container {
   margin-left: 10px;
